feat: adiciona gerenciamento de perfil e funcionalidade de avatar
